chore: polish service v2